syntax = "proto2";

message GetPerflowMsg {
    optional string key = 1;
}
