syntax = "proto2";

message FlowState {
    required int32 data = 1;
}
